--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,21 +18,16 @@
 
         <ImageView
                 android:id="@+id/mainLogo"
-                android:layout_marginTop="8dp"
-                android:layout_width="50dp"
+                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:src="@drawable/peter_and_friends_logo"
+                android:src="@drawable/app_name"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <ImageButton
-                android:layout_width="42dp"
-                android:layout_height="35dp"
-                android:src="@drawable/search"
-
-                app:layout_constraintLeft_toRightOf="@id/mainLogo" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"/>
     </android.support.constraint.ConstraintLayout>
     <FrameLayout
             android:id="@+id/fragmentContainer"
