--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
         <item name = "android:textColor">@android:color/white</item>
         <item name = "android:background">@color/colorPrimaryDark</item>
         <item name = "android:fontFamily">@font/rubik_regular</item>
+        <item name = "android:textSize">18sp</item>
         <item name ="android:radius">10dp</item>
     </style>
 
