--- a/app/src/main/res/layout/account_information_row.xml
+++ b/app/src/main/res/layout/account_information_row.xml
@@ -1,94 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-    <ImageView
-            android:contentDescription=""
-            android:id="@+id/profilePicture"
-            android:layout_width="381dp"
-            android:layout_height="186dp"
-            android:src="@drawable/rectangle"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorSpearmint">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/imageView2"
+        <ImageView
+                android:contentDescription=""
+                android:id="@+id/btn_capture_photo"
+                android:layout_width="347dp"
+                android:layout_height="488dp"
+                android:src="@drawable/white_rectangle"
 
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="288dp" android:layout_marginStart="288dp"
-            android:src="@mipmap/ic_launcher"
-            app:srcCompat="@mipmap/ic_launcher_round"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                android:layout_marginTop="76dp" app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-            android:text="First Name"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:id="@+id/tvFirstName"
-            android:textSize="24sp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/imageView2"
+                android:src="@drawable/account"
 
-    <TextView
-            android:text="Last Name"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:id="@+id/tvLastName"
-            android:textSize="24sp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvFirstName" android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"/>
-    <TextView
-            android:text="@string/location"
-            android:layout_width="163dp"
-            android:layout_height="22dp"
-            android:id="@+id/tvAddress"
-            app:layout_constraintTop_toBottomOf="@id/ratingBar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            tools:layout_editor_absoluteY="92dp" android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
-    <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ratingBar"
-            android:gravity="center"
-            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
-            android:numStars="5"
-            android:progressTint="#444444"
-            android:rating="4" android:stepSize="1"
-            app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
-            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="24dp"/>
+                android:layout_width="146dp"
+                android:layout_height="148dp"
+                android:layout_marginTop="92dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="132dp" android:layout_marginStart="132dp"
 
-    <TextView
-            android:text="@string/description"
-            android:layout_width="255dp"
-            android:layout_height="69dp"
-            android:id="@+id/tvDescription"
-            app:layout_constraintEnd_toEndOf="@+id/tvAddress"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/tvAddress" android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"/>
+                app:srcCompat="@mipmap/ic_launcher_round"/>
 
-    <Button android:text="@string/edit"
-            android:id="@+id/btnEditBio"
-            android:textColor="#444444" android:background="#FFFFFF"
-            android:layout_width="103dp" android:layout_height="29dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.0"/>
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+                android:id="@+id/etJobTitle"
+                android:text="Budapest, Hungary"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:ems="10"
+
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
+                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/etJobTitle2"
+                android:layout_marginTop="8dp"/>
+
+        <TextView
+                android:id="@+id/etJobTitle2"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:ems="10"
+
+                android:text="Peter Ékler"
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
+        <TextView
+                android:id="@+id/etJobDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:lines="4"
+                android:text="Hello! I am passionate about mobile software development! Shoot me a message if you need help implementing a recycler view!"
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+                android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etJobTitle"/>
+
+
+        <TextView
+                android:id="@+id/etJobDescription2"
+                android:text="Gigs Completed:\nSpring Mobile Software Professor\nInstagram Lead Developer\nFacebook Lead Developer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:lines="4"
+                android:hint="@string/job_details"
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+                android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etJobDescription"/>
+        <Button
+                android:id="@+id/btnSubmit"
+                android:text="Edit Bio"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@drawable/rectangle"
+                android:layout_marginEnd="80dp"
+                android:layout_marginRight="80dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="80dp"
+                android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0"
+                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                android:textColor="@android:color/white"
+
+                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/etJobDescription2"/>
+
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
+
+
