--- a/app/src/main/res/layout/create_posting_fragment.xml
+++ b/app/src/main/res/layout/create_posting_fragment.xml
@@ -1,128 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <ImageView
-            android:contentDescription=""
-            android:src="@drawable/job_rectangle"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/createJobTitle"
-            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
-            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0"/>
-
-    <TextView
-            android:text="@string/create_job_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/createJobTitle"
-            android:textSize="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <EditText
-            android:id="@+id/etJobTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="@+id/view" app:layout_constraintEnd_toEndOf="@+id/view"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="@+id/view" app:layout_constraintHorizontal_bias="0.0"/>
-
-    <EditText
-            android:id="@+id/etJobDescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:lines="4"
-            android:hint="@string/job_details"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etJobTitle"
-            app:layout_constraintEnd_toEndOf="@+id/view" app:layout_constraintStart_toStartOf="@+id/view"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"/>
-
-    <EditText
-            android:id="@+id/etJobPayment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/payment_hint"
-            android:inputType="numberDecimal"
-            app:layout_constraintEnd_toEndOf="@+id/etJobDescription"
-            app:layout_constraintStart_toStartOf="@+id/etJobDescription"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etJobDescription"/>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Attach image"
-            android:textSize="20sp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/etJobPayment"
-            app:layout_constraintStart_toStartOf="@+id/etJobPayment" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:id="@+id/textView2"/>
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:background="@color/colorSpearmint">
+        <ImageView
+                android:layout_width="174dp"
+                android:layout_height="157dp"
+                android:src="@drawable/peter_and_friends_logo"
+                android:id="@+id/imageView"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.497"/>
 
-    <ImageButton
-            android:id="@+id/btnCaptureJobPhoto"
-            android:src="@drawable/ic_collections"
-            android:layout_height="40dp"
-            android:layout_width="70dp"
-            app:layout_constraintStart_toStartOf="@+id/etJobPayment" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@color/colorPrimaryDark" app:layout_constraintEnd_toEndOf="@+id/view"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+        <ImageView
+                android:contentDescription=""
+                android:id="@+id/btn_capture_photo"
+                android:layout_width="347dp"
+                android:layout_height="464dp"
+                android:src="@drawable/white_rectangle"
 
-    <Button
-            android:id="@+id/btnSubmit"
-            android:text="@string/post_job"
-            android:textSize="20sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-            android:textColor="@android:color/white"
-            android:background="@drawable/rectangle"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <ImageView
-            android:id="@+id/ivJobImg"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="24dp"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toBottomOf="@+id/btnCaptureJobPhoto"
-            app:layout_constraintStart_toStartOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="@+id/view"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/view"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/signUpDesc" android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
 
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+                android:text="@string/create_job_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/signUpDesc"
+                android:textSize="20sp"
+
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+        <EditText
+                android:id="@+id/etJobTitle"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:hint="@string/job_title"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="@id/btn_capture_photo"
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
+        <EditText
+                android:id="@+id/etJobDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:lines="4"
+                android:hint="@string/job_details"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/etJobTitle"
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+                android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp" app:layout_constraintHorizontal_bias="0.4"/>
+        <EditText
+                android:id="@+id/etJobPayment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:hint="@string/payment_hint"
+                app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+                app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
+                app:layout_constraintTop_toBottomOf="@+id/etJobDescription"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Attach image"
+                android:textSize="16sp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/etJobPayment"
+                app:layout_constraintStart_toStartOf="@+id/etJobPayment" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp" android:id="@+id/textView2"/>
+
+        <ImageButton
+                android:id="@+id/btnCaptureJobPhoto"
+                android:src="@drawable/ic_collections"
+                android:layout_height="40dp"
+                android:layout_width="70dp"
+                app:layout_constraintStart_toStartOf="@+id/etJobPayment" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:background="@color/colorPrimaryDark"
+
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+                app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+        <ImageView
+                android:id="@+id/ivJobImg"
+                android:layout_width="134dp"
+                android:layout_height="130dp"
+                android:scaleType="fitXY"
+
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/etJobPayment"
+                app:layout_constraintStart_toEndOf="@+id/btnCaptureJobPhoto" android:layout_marginLeft="36dp"
+                android:layout_marginStart="36dp"/>
+
+
+        <Button
+                android:id="@+id/btnSubmit"
+                android:text="@string/post_job"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@drawable/rectangle"
+                android:layout_marginEnd="80dp"
+                android:layout_marginRight="80dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="80dp"
+                android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0"
+                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                android:textColor="@android:color/white"
+
+                android:layout_marginTop="84dp" app:layout_constraintTop_toBottomOf="@+id/btnCaptureJobPhoto"/>
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
