--- a/app/src/main/res/layout/job_post_row.xml
+++ b/app/src/main/res/layout/job_post_row.xml
@@ -25,13 +25,15 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
         <TextView
+                android:maxLength="12"
                 android:layout_margin="20dp"
                 android:id="@+id/tvJobTitle"
                 android:layout_gravity="center_vertical"
-                android:textSize="30sp"
+                android:textSize="26sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Job Title"
+                android:ellipsize="end"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg"
                 android:layout_marginTop="20dp"
@@ -61,7 +63,8 @@
                 android:id="@+id/tvDescription"
                 android:layout_width="267dp"
                 android:layout_height="51dp"
-                android:text="JobDescription"
+                android:text="@string/jobdescription"
+                android:maxLines="3"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
@@ -84,7 +87,9 @@
                 android:background="@drawable/btn_default"
                 android:textColor="#FFFFFF"
                 app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg" android:layout_marginStart="240dp"
-                android:layout_marginLeft="240dp" tools:layout_editor_absoluteY="0dp"/>
+                android:layout_marginLeft="240dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
