--- a/app/src/main/res/layout/mail_create.xml
+++ b/app/src/main/res/layout/mail_create.xml
@@ -1,90 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="fill_parent"
-        android:background="@color/colorAccent"
-        tools:context=".CreateMailActivity"
-        android:layout_height="fill_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:background="@color/colorSpearmint">
+    <ImageView
+            android:layout_width="239dp"
+            android:layout_height="236dp"
+            android:src="@drawable/peter_and_friends_logo"
+            android:id="@+id/imageView"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
 
-    <LinearLayout
-            android:id="@+id/activity_write_post"
-            android:layout_width="match_parent"
+    <ImageView
+            android:id="@+id/bgSquare"
+            android:layout_width="352dp"
+            android:layout_height="416dp"
+            android:src="@drawable/white_rectangle"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.489"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+
+    <EditText
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="vertical">
+            android:ems="10"
+            android:id="@+id/etReceiver"
+            android:hint="Receiver" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="@+id/bgSquare"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
-        <EditText
-                android:id="@+id/etReceiver"
-                android:layout_marginVertical="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:hint="Receiver"
-                android:maxLines="1"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
 
-        <EditText
-                android:id="@+id/etTitle"
-                android:layout_marginVertical="5dp"
-                android:layout_width="match_parent"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:layout_height="wrap_content"
-                android:hint="Title"
-                android:maxLines="1"/>
+            android:ems="10"
+            android:id="@+id/etTitle"
+            android:hint="Title"
+            android:layout_marginTop="8dp"
 
-        <EditText
-                android:id="@+id/etBody"
-                android:layout_marginVertical="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/field_title"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:hint="Write your post..."
-                android:inputType="textMultiLine"
-                android:maxLines="10"
-                android:scrollHorizontally="false"/>
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/etReceiver"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:weightSum="2">
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
 
-            <Button
-                    android:id="@+id/btnSend"
-                    android:layout_width="150dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:background="@color/colorSpearmint"
-                    android:layout_marginVertical="5dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:onClick="sendClick"
-                    android:text="Send"/>
+            android:ems="10"
+            android:id="@+id/etBody"
+            android:hint="Write Your Message Here"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/etTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
 
-            <Button
-                    android:id="@+id/btnAttach"
-                    android:layout_width="150dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:background="@color/colorSpearmint"
-                    android:layout_marginVertical="5dp"
-                    android:layout_weight="0"
-                    android:layout_height="wrap_content"
-                    android:text="Attach photo"/>
-
-        </LinearLayout>
+            android:inputType="textMultiLine"
+            android:minLines="3"
+            android:maxLines="3"
+            android:scrollHorizontally="false"/>
 
 
-        <ImageView
-                android:id="@+id/imgAttach"
-                android:layout_width="292dp"
-                android:layout_height="465dp"
-                android:scaleType="fitStart"
-                android:visibility="gone"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="5dp"
+    <TextView
+            android:text="Attach Image"
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAttach"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/etBody"
+            android:layout_marginEnd="232dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="232dp"
+    />
 
-        />
-    </LinearLayout>
-</ScrollView>
+    <ImageView
+            android:id="@+id/imgAttach"
+            android:layout_width="143dp"
+            android:layout_height="128dp"
+
+
+            android:layout_marginEnd="80dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="80dp"
+            android:layout_marginStart="80dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"
+            app:layout_constraintHorizontal_bias="1.0"
+
+            app:layout_constraintTop_toBottomOf="@+id/etBody"/>
+
+    <Button
+            android:text="Send Message"
+            android:layout_width="0dp"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSend"
+            android:onClick="sendClick"
+            android:layout_marginTop="104dp"
+            android:background="@drawable/rectangle"
+            android:textColor="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/btnAttach" android:layout_marginEnd="80dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="80dp"
+            android:layout_marginStart="80dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
+
+</android.support.constraint.ConstraintLayout>
